tests/neg/simple/parse-01.ts

/*@ c :: {v:string | true } */
var c = 1;

/* e :: {v: #Array[#Immutable,string] | 0 < 1} */
var e = "aaa";

